@@ -151,3 +151,7 @@ D: issue 198
 N: Suzan Shakya
 E: suzan.shakya@gmail.com
 D: issue 211
+
+N: Claus Klein
+E: claus.klein.sha@googlemail.com
+D: issue 232
